# ADAMOPS

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
adamops/: __init__.py  cli.py  distributed.py  hardware.py  trainer.py
adamops/backend/: __init__.py  app.py  database.py  launcher.py  runner.py
adamops/colab/: __init__.py  bridge.py  setup_snippet.py
adamops/data/: __init__.py  feature_engineering.py  loaders.py  preprocessors.py  splitters.py  validators.py
adamops/deployment/: __init__.py  api.py  cloud.py  containerize.py  exporters.py  playground.py
adamops/evaluation/: __init__.py  comparison.py  explainability.py  metrics.py  reports.py  visualization.py
adamops/monitoring/: __init__.py  alerts.py  dashboard.py  drift.py  performance.py
adamops/pipelines/: __init__.py  orchestrators.py  workflows.py
adamops/studio/: __init__.py  compiler.py  engine.py  launcher.py  nodes.py  server.py
adamops/studio/static/: app.js  index.html  style.css
adamops/utils/: __init__.py  config.py  helpers.py  logging.py
docs/: README.md  adamops.data.rst  adamops.deployment.rst  adamops.evaluation.rst  adamops.models.rst  adamops.monitoring.rst  adamops.pipelines.rst  adamops.rst  adamops.studio.rst  adamops.utils.rst  api_reference.md  conf.py  getting_started.rst  index.rst  modules.rst
examples/: README.md  quick_start.py
test-notebook/: test.ipynb
tests/: __init__.py  test_automl_advanced.py  test_backend.py  test_colab.py  test_data.py  test_evaluation.py  test_hardware.py  test_models.py  test_studio_compiler.py  test_trainer.py
