[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamops"
version = "0.1.1"
description = "A comprehensive MLOps library for end-to-end machine learning workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Team ADAM", email = "ayush89718@gmail.com"}
]
maintainers = [
    {name = "Team ADAM", email = "ayush89718@gmail.com"}
]
keywords = [
    "mlops",
    "machine-learning",
    "data-science",
    "automl",
    "model-deployment",
    "model-monitoring",
    "feature-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.2.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",
    "rich>=13.5.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "flask>=2.3.0",
    "streamlit>=1.25.0",
    "websockets>=11.0",
    "jinja2>=3.1.0",
]
backend = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
]
automl = [
    "optuna>=3.0.0",
    "ray[tune]>=2.5.0",
]
explainability = [
    "shap>=0.41.0",
    "lime>=0.2.0",
]
export = [
    "onnx>=1.14.0",
    "skl2onnx>=1.15.0",
]
tracking = [
    "mlflow>=2.5.0",
]
colab = [
    "requests>=2.28.0",
    "websocket-client>=1.5.0",
]
distributed = [
    "torch>=2.0.0",
    "ray[train]>=2.5.0",
]
all = [
    "optuna>=3.0.0",
    "ray[tune]>=2.5.0",
    "shap>=0.41.0",
    "lime>=0.2.0",
    "onnx>=1.14.0",
    "skl2onnx>=1.15.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "flask>=2.3.0",
    "streamlit>=1.25.0",
    "mlflow>=2.5.0",
    "websockets>=11.0",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
    "websocket-client>=1.5.0",
    "torch>=2.0.0",
]

[project.scripts]
adamops = "adamops.cli:main"

[project.urls]
Homepage = "https://github.com/Ayushmishra05/ADAMOPS"
Documentation = "https://github.com/Ayushmishra05/ADAMOPS#readme"
Repository = "https://github.com/Ayushmishra05/ADAMOPS"
"Bug Tracker" = "https://github.com/Ayushmishra05/ADAMOPS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["adamops*"]
exclude = ["tests", "tests.*", "examples", "docs", "venv", "venv.*", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
